--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/hmd.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/hmd.html
@@ -37,12 +37,6 @@
             <col />
             <tbody>
                 <tr>
-                    <td colspan="4">
-                        <span class="text-danger"><strong>注意：请仔细核对用户信息，并按照用户提供的转账凭证与平台账户收款凭证正确填写以下信息！<br>
-                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp若信息填写错误可能导致充值失败！</strong></span>
-                    </td>
-                </tr>
-                <tr>
                     <td align="right">
                         <label for="cUsername" class="control-label">用户姓名:</label>
                     </td>
@@ -77,66 +71,10 @@
                 </tr>
                 <tr>
                     <td align="right">
-                        <label for="nCzje" class="control-label"><i class="require">*</i>充值金额:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="nCzje" name="nCzje" placeholder="请输入充值金额">
-                    </td>
-                    <td align="right">
-                        <label for="dDzsj" class="control-label"><i class="require">*</i>到账时间:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="dDzsj" name="dDzsj" placeholder="请输入到账时间">
-                    </td>
-                </tr>
-                <tr>
-                    <td align="right">
-                        <label for="cSfcg" class="control-label"><i class="require">*</i>是否成功:</label>
-                    </td>
-                    <td align="left">
-                        <select class="form-control"  name="cSfcg" id="cSfcg"></select>
-                    </td>
-                    <td align="right">
-                        <label for="cCzfs" class="control-label"><i class="require">*</i>充值方式:</label>
-                    </td>
-                    <td align="left">
-                        <select class="form-control"  name="cCzfs" id="cCzfs"></select>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="right">
-                        <label for="cCzyh" class="control-label">充值银行:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="cCzyh" name="cCzyh" placeholder="请输入充值银行">
-                    </td>
-                    <td align="right">
-                        <label for="cZfzh" class="control-label"><i class="require">*</i>支付账户:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="cZfzh" name="cZfzh" placeholder="请输入支付账户">
-                    </td>
-                </tr>
-                <tr>
-                    <td align="right">
-                        <label for="cDzzh" class="control-label"><i class="require">*</i>到账账户:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="cDzzh" name="cDzzh" placeholder="到账账户">
-                    </td>
-                    <td align="right">
-                        <label for="cZzdh" class="control-label"><i class="require">*</i>转账单号:</label>
-                    </td>
-                    <td align="left">
-                        <input type="text" class="form-control" id="cZzdh" name="cZzdh" placeholder="请输入转账单号">
-                    </td>
-                </tr>
-                <tr>
-                    <td align="right">
-                        <label for="cBz" class="control-label">备注:</label>
+                        <label for="cCzyy" class="control-label"><i class="require">*</i>操作原因:</label>
                     </td>
                     <td align="left" colspan="3">
-                        <textarea class="form-control" id="cBz" name="cBz" placeholder="请输入备注"></textarea>
+                        <textarea class="form-control" id="cCzyy" name="cCzyy" placeholder="请输入操作原因"></textarea>
                     </td>
                 </tr>
             </tbody>
@@ -144,7 +82,7 @@
     </form>
 
     <div class="edit-footer">
-        <button type="button" class="btn btn-primary" id="btnSave">确认充值</button>
+        <button type="button" class="btn btn-primary" id="btnSave">确&nbsp&nbsp&nbsp&nbsp认</button>
         <button type="button" class="btn btn-default" id="btnRet">关&nbsp&nbsp&nbsp&nbsp闭</button>
     </div>
 </div>
