--- a/GreenPlatform/src/main/resources/templates/web/history.html
+++ b/GreenPlatform/src/main/resources/templates/web/history.html
@@ -22,31 +22,48 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>绿沙平台</a>
+                    <div class="navbar-brand" href="#" id="navbarBrand">
+                        <img class="logo" src="/publicImg/logo.png">
+                        <div id="brandTitle">绿沙平台<span id="brandSubttle">LVSHAPINGTAI</span></div>
+                        <span id="smallTitle">绿化沙漠&nbsp&nbsp&nbsp&nbsp共享未来</span>
+                    </div>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li id="cHome"><a href="/web/index">返回首页</a></li>
-                        <li id="cJzjl" class="active"><a href="#">捐赠记录 <span class="sr-only">(current)</span></a></li>
-                        <li id="cCzls"><a href="#">充值历史</a></li>
-                        <li id="cTxls"><a href="#">提现历史</a></li>
-                    </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" id="certification">实名认证</a></li>
-                        <li><a href="#" id="perInfo">完善资料</a></li>
+                        <li id="cHome"><a href="/web/index">返回首页</a></li>
+                        <li class="loadGrid active" id="cJzjl"><a href="#">捐赠记录 <span class="sr-only">(current)</span></a></li>
+                        <li class="loadGrid" id="cCzls"><a href="#">充值历史</a></li>
+                        <li class="loadGrid" id="cTxls"><a href="#">提现历史</a></li>
+                        <li><a href="#" id="perInfo">修改资料</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
+    <section class="container-fluid tableSection">
+        <div class="row searchForm">
+            <div class="col-md-1 col-xs-4"><strong>操作时间起:</strong></div>
+            <div class="col-md-2 col-xs-6">
+                <input type="text" class="form-control" id="dKssj" onclick="WdatePicker({dateFmt:'yyyy-MM-dd'})" placeholder="操作时间起">
+            </div>
+            <div class="col-md-1 col-xs-2">
+                <button class="btn btn-primary" id="btnSearch">检索</button>
+            </div>
+        </div>
+        <div class="gridbox" id="gridbox_cJzjl"></div>
+        <div class="gridbox" id="gridbox_cCzls" hidden></div>
+        <div class="gridbox" id="gridbox_cTxls" hidden></div>
+        <div id="commonInfo"></div>
+    </section>
+
     <div class="modal fade bs-example-modal-lg" id="perInfoModel" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="exampleModalLabel">完善基本信息</h4>
+                    <h4 class="modal-title" id="exampleModalLabel">修改用户信息</h4>
                 </div>
                 <div class="modal-body">
                     <form id="perInfoForm" class="form-horizontal">
@@ -99,18 +116,7 @@
         </div>
     </div>
 
-    <section class="container-fluid tableSection">
-        <form class="form-inline searchForm">
-            <div class="form-group">
-                <label for="dKssj">操作时间起：</label>
-                <input type="text" class="form-control" id="dKssj" onclick="WdatePicker({dateFmt:'yyyy-MM-dd'})" placeholder="操作时间起">
-            </div>
-            <button class="btn btn-primary" id="btnSearch">检索</button>
-        </form>
-        <div class="gridbox" id="gridbox_cJzjl"></div>
-        <div class="gridbox" id="gridbox_cCzls" hidden></div>
-        <div class="gridbox" id="gridbox_cTxls" hidden></div>
-    </section>
+
 
 
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
