--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/nlcz.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/nlcz.html
@@ -38,8 +38,8 @@
             <tbody>
                 <tr>
                     <td colspan="4">
-                            <span class="text-danger"><strong>注意：请仔细核对用户信息，并按照收款凭证与用户提供的转账凭证正确填写以下信息！若信息填写错误可能导致提现失败！【充值操作时，付款方为用户，收款方为平台】。<br>
-                                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp注意：提现成功后不可撤回！</strong></span>
+                            <span class="text-danger"><strong>注意：请仔细核对用户信息，并按照收款凭证与用户提供的转账凭证正确填写以下信息！若信息填写错误可能导致充值失败！【充值操作时，付款方为用户，收款方为平台】。<br>
+                                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp注意：充值成功后不可撤回！</strong></span>
                     </td>
                 </tr>
                 <tr>
