--- a/GreenPlatform/src/main/resources/templates/web/certification.html
+++ b/GreenPlatform/src/main/resources/templates/web/certification.html
@@ -24,30 +24,30 @@
                     </div>
                     <div class="panel-body">
                         <div class="form-horizontal"  id="dataForm">
-                            <div class="form-group">
-                                <label for="cUsername" class="control-label"></label>
+                            <div class="row">
+                                <span for="cUsername" class="control-label"></span>
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control input-lg" id="cUsername" name="cUsername" placeholder="请输入姓名">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="cPhone" class="control-label"></label>
+                            <div class="row">
+                                <span for="cPhone" class="control-label"></span>
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control input-lg" id="cPhone" name="cPhone" placeholder="请输入手机号码">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="cZjhm" class="control-label"></label>
+                            <div class="row">
+                                <span for="cZjhm" class="control-label"></span>
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control input-lg" id="cZjhm" name="cZjhm" placeholder="请输入身份证号">
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="row">
                                 <div class="col-sm-12">
                                     <button type="button" id="btnCertification" class="btn btn-block btn-lg btn-primary">确认</button>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="row">
                                 <div class="col-sm-12">
                                     <a href="/web/index" class="btn btn-block btn-lg btn-info">返回</a>
                                 </div>
