--- a/GreenPlatform/src/main/resources/templates/web/history.html
+++ b/GreenPlatform/src/main/resources/templates/web/history.html
@@ -35,7 +35,7 @@
                         <li class="loadGrid active" id="cJzjl"><a href="#">捐赠记录 <span class="sr-only">(current)</span></a></li>
                         <li class="loadGrid" id="cCzls"><a href="#">充值历史</a></li>
                         <li class="loadGrid" id="cTxls"><a href="#">提现历史</a></li>
-                        <li><a href="#" id="perInfo">修改资料</a></li>
+                        <!--<li><a href="#" id="perInfo">修改资料</a></li>-->
                     </ul>
                 </div>
             </div>
