--- a/GreenPlatform/src/main/resources/static/style/web/certification.css
+++ b/GreenPlatform/src/main/resources/static/style/web/certification.css
@@ -1,8 +1,19 @@
 /*公共begin*/
 header{
-    width: 100%;
-    background: url("../../publicImg/systemBg.jpg") repeat-x;
-    overflow-x: hidden;
+    position:fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    min-width: 800px;
+    z-index:-10;
+    zoom: 1;
+    background-color: #fff;
+    background: url("../../publicImg/systemBg.jpg") no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-position: center 0;
 }
 .mr-top-100{
     margin-top:100px;
@@ -22,6 +33,24 @@ header{
 /*公共end*/
 .certificationHeader{
     height:100%;
+}
+#dataForm .row{
+    margin-top: 10px;
+}
+
+/*终端尺寸适配*/
+@media screen and (max-width: 600px) {
+    /* #registerForm .row{
+         height: 50px;
+         margin-bottom: 0;
+         margin-top: 5px;
+     }*/
+
+    /*手机背景*/
+    header{
+        min-width: 350px;
+        background: url("../../publicImg/telBg.jpg") no-repeat;
+    }
 }
 
 
