--- a/GreenPlatform/src/main/resources/templates/index.html
+++ b/GreenPlatform/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <title>绿沙平台</title>
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/style/web/webstyle.css">
+    <link rel="stylesheet" href="/style/index/index.css">
 </head>
 <body>
     <div id="home"></div>
@@ -35,16 +35,15 @@
                         <li><a href="#goldList">点赞排行榜</a></li>
                         <li><a href="#rankList">能量排行榜</a></li>
                         <li><a href="#market">种子商店</a></li>
-                        <!--<li><a th:text="${loginuserHome.plateUser.cUsername}"></a></li>-->
-                        <li class="dropdown">
+                        <li><a href="/base/login">登陆</a></li>
+                        <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我的 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#" id="myAccount">我的账户</a></li>
                                 <li><a href="#">邀请好友</a></li>
                                 <li><a href="/base/loginout">退出</a></li>
                             </ul>
-                        </li>
-                        <!--<li th:text="${session.loginUser.cLoginname}"></li>-->
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -52,21 +51,21 @@
 
         <!--任务-->
         <div class="container-fluid mission" id="mission">
-            <div th:style="${loginuserHome.tGreenRwRwmx['1']} == true ? 'display: none':''">
+            <div>
                 <div class="mission-sf">
                     <a class="rwlb_1" id="finishMisson_sf" value="1">
                         <img src="/publicImg/icon/sf.png" id="sf" class="center-block" alt="">
                     </a>
                 </div>
             </div>
-            <div th:style="${loginuserHome.tGreenRwRwmx['2']} == true ? 'display: none':''">
+            <div>
                 <div class="mission-js">
                     <a class="rwlb_2" id="finishMisson_js" value="2">
                         <img src="/publicImg/icon/js.png" id="js" class="center-block" alt="">
                     </a>
                 </div>
             </div>
-            <div th:style="${loginuserHome.tGreenRwRwmx['3']} == true ? 'display: none':''">
+            <div>
                 <div class="mission-yg">
                     <a class="rwlb_3" id="finishMisson_yg" value="3">
                         <img src="/publicImg/icon/yg.png" id="yg" class="center-block" alt="">
@@ -74,7 +73,7 @@
                 </div>
             </div>
             <div class="tree">
-                <img th:attr="src='/publicImg/icon/'+${loginuserHome.tGreenRwRwmx['endRwCountDay']}+'.png'" alt="">
+                <img src="/publicImg/icon/sm.png" alt="">
             </div>
         </div>
     </header>
@@ -105,11 +104,6 @@
                 <div class="col-md-4 col-xs-4" th:text="${tGreenGoldDzhzList.cUsername}"></div>
                 <div class="col-md-4 col-xs-5" th:text="${tGreenGoldDzhzList.nDzzl}"></div>
             </div>
-            <div class="row goldDzRankContent">
-                <div class="col-md-4 col-xs-4 goldDzRankContent_ower" th:text="${loginuserHome.owerTGreenGoldDzhz['nRank']}"></div>
-                <div class="col-md-4 col-xs-3" th:text="${loginuserHome.owerTGreenGoldDzhz['cUsername']}"></div>
-                <div class="col-md-4 col-xs-5" th:text="${loginuserHome.owerTGreenGoldDzhz['n_dzzl']}"></div>
-            </div>
         </div>
     </div>
 
@@ -131,11 +125,6 @@
                 <div class="col-md-4 col-xs-3" th:text=${tGreenNlNlhzStatu.index+1} th:attr="id = 'goldDzRankContent_'+${tGreenNlNlhzStatu.index+1}"></div>
                 <div class="col-md-4 col-xs-4" th:text=${tGreenNlNlhz.cUsername}></div>
                 <div class="col-md-4 col-xs-5" th:text="${tGreenNlNlhz.nNlhz}+'G'"></div>
-            </div>
-            <div class="row goldDzRankContent">
-                <div class="col-md-4 col-xs-4 goldDzRankContent_ower" th:text="${loginuserHome.owerTGreenNlHz['nRank']}"></div>
-                <div class="col-md-4 col-xs-3" th:text="${loginuserHome.owerTGreenNlHz['cUsername']}"></div>
-                <div class="col-md-4 col-xs-5" th:text="${loginuserHome.owerTGreenNlHz['n_nlhz']}+G"></div>
             </div>
         </div>
     </div>
@@ -181,102 +170,12 @@
         <span id="returnTop" class="glyphicon glyphicon-chevron-up"></span>
     </div>
 
-    <!-- myAccountModel -->
-    <div class="modal fade" id="myAccountModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">我的账户</h4>
-                </div>
-                <div class="modal-body">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <span id="cUsername"></span>
-                            <span class="badge" id="cRydj"></span>
-                            <a href="/base/certification" class="btn-link" target="" id="certiBtn">实名制</a>
-                            <!--<a href="/base/webIndexEdit" class="btn-link" target="" id="certiEdit">修改信息</a>-->
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge" id="nNlhz"></span>我的能量
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge" id="nJbzl"></span>我的金币
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge" id="nDzzl"></span>我的点赞数
-                        </li>
-                        <li class="list-group-item">
-                            <button class="btn btn-primary btn-sm" id="btnCz">充值</button>
-                            <button class="btn btn-info btn-sm" id="btnTx">提现</button>
-                        </li>
-                        <li class="list-group-item">
-                            我的植物
-                        </li>
-                        <li class="list-group-item" id = "mySeed">
-                            <ul class="list-group">
-                            </ul>
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge" id="nMonthRw"></span>本月任务
-                        </li>
-                        <li class="list-group-item">
-                            今日任务
-                        </li>
-                        <li class="list-group-item">
-                            <ul class="list-group">
-                                <li class="list-group-item">
-                                    <span>施肥</span>
-                                    <span id="cRwlb_1" class="badge">已完成</span>
-                                </li>
-                                <li class="list-group-item">
-                                    <span>浇水</span>
-                                    <span id="cRwlb_2" class="badge">已完成</span>
-                                </li>
-                                <li class="list-group-item">
-                                    <span>沐浴阳光</span>
-                                    <span id="cRwlb_3" class="badge">已完成</span>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="/base/history" target="">捐赠记录</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="/base/history" target="">充值记录</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="/base/history" target="">提现记录</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--<div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="btnRet">关闭</button>
-                </div>-->
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="customModel" tabindex="-1" role="dialog" aria-labelledby="customModelLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="customModelLabel">扫码加客服</h4>
-                </div>
-                <div class="modal-body">
-                    <img src="/publicImg/customImg.jpg" id="customImg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
     <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
     <script src="/publicJs/SendRequest.js"></script>
     <script src="/publicJs/publicyw.js"></script>
-    <script src="/js/web/webIndex.js"></script>
+    <script src="/js/index/index.js"></script>
 </body>
 </html>
