--- a/GreenPlatform/src/main/resources/templates/index.html
+++ b/GreenPlatform/src/main/resources/templates/index.html
@@ -164,7 +164,10 @@
 
 
     <footer class="container-fluid indexFooter">
-        版权所有:绿沙种植网络平台有限责任公司
+        联系方式：QQ：1584638913    邮箱：1584638913@qq.com <br>
+        Lvsawangluofuwupingtai     版权所有:绿沙网络服务平台 <br>
+        Copyright@2019-www.lhwlljnw.com <br>
+        绿化沙漠     共享未来
     </footer>
     <div class="sidebar-returnTop">
         <span id="returnTop" class="glyphicon glyphicon-chevron-up"></span>
