--- a/GreenPlatform/src/main/resources/templates/index.html
+++ b/GreenPlatform/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
     </header>
 
     <!--点赞排行榜-->
-    <div id="goldList" class="container-fluid mr-top-50">
+    <div id="goldList" class="container-fluid">
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-md-offset-4 col-md-4">
                     <div class="btnLikeBox">
-                        <span class="glyphicon glyphicon-thumbs-up" id="btnLike"></span>
+                        <span class="glyphicon glyphicon-heart" id="btnLike"></span>
                         <span id="jsGold">-50</span>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
 
 
     <!--能量排行榜-->
-    <div id="rankList" class="container-fluid mr-top-50">
+    <div id="rankList" class="container-fluid">
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
@@ -124,7 +124,7 @@
             <div class="row goldDzRankContent" th:each="tGreenNlNlhz,tGreenNlNlhzStatu : ${loginuserHome.tGreenNlNlhzList}">
                 <div class="col-md-4 col-xs-3" th:text=${tGreenNlNlhzStatu.index+1} th:attr="id = 'goldDzRankContent_'+${tGreenNlNlhzStatu.index+1}"></div>
                 <div class="col-md-4 col-xs-4" th:text=${tGreenNlNlhz.cUsername}></div>
-                <div class="col-md-4 col-xs-5" th:text="${tGreenNlNlhz.nNlhz}+'G'"></div>
+                <div class="col-md-4 col-xs-5" th:text="${tGreenNlNlhz.nNlhz}"></div>
             </div>
         </div>
     </div>
@@ -136,7 +136,7 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="single-package">
-                        <h3 class="text-center">种子商店</h3>
+                        <h3 class="text-center market-title">种子商店</h3>
                     </div>
                 </div>
             </div>
@@ -144,11 +144,11 @@
                 <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-4" th:each="tGreenSpSpmxList : ${loginuserHome.tGreenSpSpmxList}">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img th:attr="src = ${tGreenSpSpmxList.cImgurl}" alt=""></a>
+                            <a href="##"><img th:attr="src = ${tGreenSpSpmxList.cImgurl}" alt=""></a>
                         </div>
                         <div class="package-content">
                             <h3><a href="" title="" id="cSpmc" th:text=${tGreenSpSpmxList.cSpmc}></a></h3>
-                            <span id="nSpjg" th:text="${tGreenSpSpmxList.nSpjg} + '克'"></span>
+                            <span id="nSpjg" th:text="'￥' + ${tGreenSpSpmxList.nSpjg}"></span>
                             <p id="cSpms" th:attr="title = ${tGreenSpSpmxList.cSpms}" th:text=${tGreenSpSpmxList.cSpms}> </p>
                         </div>
                         <div class="package-calto-action">
